--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,11 +41,9 @@ body .wrapper {
   padding-left: 70px;
   -webkit-transition: all .4s ease 0s;
   transition: all .4s ease 0s;
-  height: 100%;
-}
-
-body .wrapper.active {
-  padding-left: 150px;
+  height: 90%;
+  position: absolute;
+  width: 150px;
 }
 
 body .wrapper.active .sidebar-wrapper {
@@ -119,5 +117,31 @@ body .wrapper .sidebar-wrapper .logo-container {
 body .wrapper .sidebar-wrapper .logo-container img {
   width: 40%;
   margin-top: 10px;
+}
+
+body main {
+  margin-left: 150px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 525px;
+}
+
+body main form {
+  width: 70%;
+}
+
+body main form input {
+  margin-bottom: 10px;
 }
 /*# sourceMappingURL=style.css.map */
