--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,58 +6,36 @@ html, body {
 body header {
   width: 100%;
   height: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 body header img.logo {
   max-height: 100%;
   max-width: 50%;
 }
-
 body header .btn-group-action {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 50%;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 60%;
 }
-
 body header .btn-group-action button {
   width: 160px;
   height: 40px;
 }
-
 body .wrapper {
   padding-left: 70px;
-  -webkit-transition: all .4s ease 0s;
-  transition: all .4s ease 0s;
+  transition: all 0.4s ease 0s;
   height: 90%;
   position: absolute;
   width: 150px;
 }
-
 body .wrapper.active .sidebar-wrapper {
   left: 150px;
 }
-
 body .wrapper .sidebar-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   margin-left: -150px;
   left: 70px;
   width: 150px;
@@ -65,10 +43,8 @@ body .wrapper .sidebar-wrapper {
   position: fixed;
   height: 100%;
   z-index: 10000;
-  -webkit-transition: all .4s ease 0s;
-  transition: all .4s ease 0s;
+  transition: all 0.4s ease 0s;
 }
-
 body .wrapper .sidebar-wrapper .sidebar-nav {
   display: block;
   float: left;
@@ -77,71 +53,146 @@ body .wrapper .sidebar-wrapper .sidebar-nav {
   margin: 0;
   padding: 0;
 }
-
 body .wrapper .sidebar-wrapper .sidebar-nav li a {
   height: 70px;
   color: #999;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  align-items: center;
+  justify-content: space-evenly;
   width: 100%;
   background: #252525;
   border-top: 1px solid #373737;
   border-bottom: 1px solid #1A1A1A;
-  -webkit-transition: background .5s;
-  transition: background .5s;
+  transition: background 0.5s;
 }
-
 body .wrapper .sidebar-wrapper .sidebar-nav li a:hover {
   color: #fff;
   background: rgba(255, 255, 255, 0.2);
   text-decoration: none;
 }
-
 body .wrapper .sidebar-wrapper .logo-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
-
 body .wrapper .sidebar-wrapper .logo-container img {
   width: 40%;
   margin-top: 10px;
 }
-
 body main {
   margin-left: 150px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  height: 525px;
+  flex-direction: column;
+  align-items: center;
+  /*height: 525px;*/
+  height: 100%;
+  text-align: center;
 }
-
+body main.j-center {
+  justify-content: center;
+}
+body main.store {
+  flex-flow: wrap;
+  justify-content: space-evenly;
+}
+body main.store .carousel {
+  width: 90%;
+  height: 350px;
+  margin-bottom: 20px;
+}
+body main.store .carousel .carousel-inner {
+  height: 100%;
+}
+body main.store .carousel .carousel-inner .carousel-item {
+  height: 100%;
+}
+body main.store .carousel .carousel-inner .carousel-item img {
+  height: 100%;
+}
+body main.h-auto {
+  height: auto;
+}
 body main form {
   width: 70%;
 }
-
-body main form input {
+body main form input, body main form select, body main form textarea {
   margin-bottom: 10px;
 }
-/*# sourceMappingURL=style.css.map */
+body main form textarea.form-control {
+  resize: none;
+  height: 90px;
+}
+body main .dashboard-nav {
+  height: 10%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid #e4e4e4;
+}
+body main .dashboard-nav ul {
+  display: flex;
+  justify-content: space-evenly;
+  width: 50%;
+  margin: 0;
+  height: 108%;
+  align-items: center;
+}
+body main .dashboard-nav ul li {
+  list-style: none;
+  cursor: pointer;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 20px 0 20px;
+  border-radius: 5px;
+}
+body main .dashboard-nav ul li:hover {
+  text-decoration: underline black;
+}
+body main .dashboard-nav ul li.active {
+  color: #007bff;
+  border-bottom: 2px solid white;
+  border-top: 1px solid #e4e4e4;
+  border-right: 1px solid #e4e4e4;
+  border-left: 1px solid #e4e4e4;
+}
+body main .dashboard-nav ul li.active:hover {
+  text-decoration: underline #007bff;
+}
+body main .align-s-r {
+  align-self: flex-end;
+  margin-right: 5%;
+}
+body main .topic-container {
+  width: 90%;
+}
+body main section {
+  height: 90%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+body main section.hidden {
+  display: none;
+}
+body main section.activity .historic-container {
+  margin-bottom: 20px;
+}
+body main section.activity .historic-container img {
+  width: 20%;
+}
+body main .card .card-body .card-number {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+body main .shop-cage {
+  display: flex;
+  flex-flow: wrap;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  height: 100%;
+}
